--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://zpc987.github.com
+production_url : http://zpc987.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -79,8 +79,8 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false
-    #provider : disqus
+    #provider : false
+    provider : disqus
     disqus :
       short_name : jekyllbootstrap
     livefyre :
